    Upgrade to bootstrap 5
    Remove operations from sidebar that are complete / failed older than 5 minutes (#407)
    Only admins can create projects (#429)
    Improve user parameter display on instance events
    Improve the following modal UI / UX;
        - create project
        - create container
        - create VM
        - create network
        - create profile
    Support limits when creating a project (#434)
    Show packets_dropped_outbound & packets_dropped_inbound on networks overview
    Support project limits on projects frontend
    Don't require filling out image when deploying cloud-config
    Support choosing project when deploying cloud-config
    Only allow choosing one host when deploying cloud-config (only on frontend)
    Add cloud & desktop icons to image lists to indicate different variants
    Improve search remote image server result layout

Fixed
    First run doesn't toggle passwords properly (#390)
    Cant override users current project with HTTP header in "Universe"
    Cant create directory storage pool
    Cant use shells other than bash
    Instance names are sometimes invalid when deploying deployment (#379)
    Delete host (#365)
    Node holding onto client sockets that will be closed (#417)
    Image type icon in images sidebar on LXD 3 host

API Changes
    Removed `memoryLimit` from CreateVirtualMachineController in favour of config param (#419)
    Image description when searching images now contains html, the plain description is now kept in the key origDescription
    Drop alias paramater from all controllers

0.13.0 - 18/07/2020

Added
    Setting for storing timezone (#371)
    Support for copying instances between projects (#375)
    Optionally copying profiles when copying instance
    Show image variants when searching images from remotes (#380)
    Support managing instance providers & their types (#395)
    Toggle admin status (#394)
    Toggle login status (#400)

Changed
    Store all dates in UTC (#370)